--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       </div>
 
        <div class="row text-center">
-    <div class="col-lg-12 d-sm-block d-none">
+    <div class="col-lg-12">
  <div class="s-content c_icon"> 
   <ul class="list-inline">
    <li class="list-inline-item"><i class="fab fa-facebook-square"></i></li>
